# stock-helper

./: README.md  docker-compose.yml
db_tools/: STOCK_DAY_ALL.json  setup_all_stocks.py
stock_helper/: Dockerfile  manage.py  pyproject.toml
stock_helper/stock_helper/: asgi.py  settings.py  urls.py  wsgi.py
stock_helper/stock_manager/: admin.py  apps.py  models.py
stock_helper/stock_manager/migrations/: 0001_initial.py
