[tool.poetry]
name = "stock-helper"
version = "0.1.0"
description = ""
authors = ["Jason <jason890088@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
cookiecutter = "^2.1.1"
psycopg2 = "^2.9.5"
whitenoise = "^6.4.0"
django-allauth = "^0.53.1"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
